// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accept Button primary success Button 1`] = `
<button
  className="btn-success width-auto btn btn-primary"
  color="success"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Primary
  <canvas
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Accept Button secondary success Button 1`] = `
<button
  className="btn-success width-auto btn btn-primary"
  color="success"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Secondary
  <canvas
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Accept Button tertiary success Button 1`] = `
<button
  className="btn-success width-auto btn btn-tertiary"
  color="success"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Primary
  <canvas
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Default Button primary Button 1`] = `
<button
  className="btn-primary width-auto btn btn-primary"
  color="primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Primary
  <canvas
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Default Button secondary Button 1`] = `
<button
  className="btn-primary width-auto btn btn-primary"
  color="primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Secondary
  <canvas
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Default Button tertiary Button 1`] = `
<button
  className="btn-primary width-auto btn btn-tertiary"
  color="primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Tertiary
  <canvas
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Disabled Button primary disabled Button 1`] = `
<button
  className="btn-primary width-auto disabled btn btn-primary"
  color="primary"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Primary
  <canvas
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Disabled Button secondary disabled Button 1`] = `
<button
  className="btn-primary width-auto disabled btn btn-primary"
  color="primary"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Secondary
  <canvas
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Disabled Button tertiary disabled Button 1`] = `
<button
  className="btn-primary width-auto disabled btn btn-tertiary"
  color="primary"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Primary
  <canvas
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;
